--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Tea Cozy</title>
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
 
   <body>
 
+    <!-- HEADER -->
+
+    <header>
+      <div><img class="logo" src="resources/images/logo.png" alt="logo"></div>
+      <div><span><a href="#">Mission</a></span><span><a href="#">Featured Tea</a></span><span><a href="#">Locations</a></span></div>
+
+    </header>
   </body>
 
 </html>
