--- a/index.html
+++ b/index.html
@@ -8,13 +8,71 @@
 
   <body>
 
-    <!-- HEADER -->
+              <!-- HEADER -->
 
     <header>
-      <div><img class="logo" src="resources/images/logo.png" alt="logo"></div>
+      <img class="logo" src="resources/images/logo.png" alt="logo">
       <div><span><a href="#">Mission</a></span><span><a href="#">Featured Tea</a></span><span><a href="#">Locations</a></span></div>
 
     </header>
+
+              <!-- content -->
+
+  <div class="content">
+
+              <!-- box1 -->
+
+    <div class="box1">
+      <div class="box1text">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artesanally Curated, Free Range, Sustainable, Smal Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+  </div>
+
+              <!-- box2 -->
+
+  <div class="box2">
+    <div class="box2text">
+      <h3>Tea of the Month</h3>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+    </div>
+
+    <div class="box2imgs">
+      <div class="img">
+        <img src="./resources/images/img2.jpg" alt="fallberry">
+      </div>
+      <div class="img">
+        <img src="./resources/images/img7.jpg" alt="spiced">
+      </div>
+      <div class="img">
+        <img src="./resources/images/img3.jpg" alt="seasonal">
+      </div>
+      <div class="img">
+        <img src="./resources/images/img6.jpg" alt="myrtle">
+      </div>
+      <div class="img">
+        <img src="./resources/images/img1.jpg" alt="bedford">
+      </div>
+    </div>
+
+              <!-- box3 -->
+
+    <div class="box3">
+      <div class="box3box">
+
+      </div>
+
+      <div class="box3box">
+
+      </div>
+
+      <div class="box3box">
+
+      </div>
+    </div>
+
+  </div>
   </body>
 
 </html>
