--- a/index.html
+++ b/index.html
@@ -28,51 +28,86 @@
         <h4>Handpicked, Artesanally Curated, Free Range, Sustainable, Smal Batch, Fair Trade, Organic Tea</h4>
       </div>
     </div>
-  </div>
+
 
               <!-- box2 -->
 
   <div class="box2">
+
     <div class="box2text">
       <h3>Tea of the Month</h3>
       <h4>What's Steeping at The Tea Cozy?</h4>
     </div>
 
     <div class="box2imgs">
+
       <div class="img">
         <img src="./resources/images/img2.jpg" alt="fallberry">
+        <h4>Fall Berry Blitz Tea</h4>
       </div>
+
       <div class="img">
         <img src="./resources/images/img7.jpg" alt="spiced">
+        <h4>Spiced Rum Tea</h4>
       </div>
+
       <div class="img">
         <img src="./resources/images/img3.jpg" alt="seasonal">
+        <h4>Seasonal Donuts</h4>
       </div>
+
       <div class="img">
         <img src="./resources/images/img6.jpg" alt="myrtle">
+        <h4>Myrle Ave Tea</h4>
       </div>
+
       <div class="img">
         <img src="./resources/images/img1.jpg" alt="bedford">
+        <h4>Bedford Bizarre Tea</h4>
       </div>
     </div>
+  </div>
 
               <!-- box3 -->
 
     <div class="box3">
-      <div class="box3box">
 
+      <div class="box3box">
+        <h3>Downtown</h3>
+        <h4>384 West 4th St</h4>
+        <h4>Suite 108</h4>
+        <h4>Portland, Maine</h4>
       </div>
 
       <div class="box3box">
-
+        <h3>East Bayside</h3>
+        <h4>3433 Phisherman's Avenue</h4>
+        <h4>(Northwest Corner)</h4>
+        <h4>Portland, Maine</h4>
       </div>
 
       <div class="box3box">
-
+        <h3>Oakdale</h3>
+        <h4>515 Crescent Avenue</h4>
+        <h4>Second Floor</h4>
+        <h4>Portland, Maine</h4>
       </div>
     </div>
 
+              <!-- box4 -->
+
+    <div class="box4">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+
   </div>
+
+  <!-- copyright -->
+
+  <h5 class="copy">copyright The Tea Cozy 2017</h5>
+
   </body>
 
 </html>
