--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- copyright -->
 
-  <h5 class="copy">copyright The Tea Cozy 2017</h5>
+  <h5 class="copy">copyrightt The Tea Cozy 2017</h5>
 
   </body>
 
