--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <img class="logo" src="resources/images/logo.png" alt="logo">
-      <div><span><a href="#">Mission</a></span><span><a href="#">Featured Tea</a></span><span><a href="#">Locations</a></span></div>
+      <div><span><a href="#box1">Mission</a></span><span><a href="#box2">Featured Tea</a></span><span><a href="#box3">Locations</a></span></div>
 
     </header>
 
@@ -22,7 +22,7 @@
 
               <!-- box1 -->
 
-    <div class="box1">
+    <div id="box1">
       <div class="box1text">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artesanally Curated, Free Range, Sustainable, Smal Batch, Fair Trade, Organic Tea</h4>
@@ -32,7 +32,7 @@
 
               <!-- box2 -->
 
-  <div class="box2">
+  <div id="box2">
 
     <div class="box2text">
       <h3>Tea of the Month</h3>
@@ -42,27 +42,27 @@
     <div class="box2imgs">
 
       <div class="img">
-        <img src="./resources/images/img2.jpg" alt="fallberry">
+        <img src="./resources/images/img2.jpg" alt="fallberry" height="200" width="300">
         <h4>Fall Berry Blitz Tea</h4>
       </div>
 
       <div class="img">
-        <img src="./resources/images/img7.jpg" alt="spiced">
+        <img src="./resources/images/img7.jpg" alt="spiced" height="200" width="300">
         <h4>Spiced Rum Tea</h4>
       </div>
 
       <div class="img">
-        <img src="./resources/images/img3.jpg" alt="seasonal">
+        <img src="./resources/images/img3.jpg" alt="seasonal" height="200" width="300">
         <h4>Seasonal Donuts</h4>
       </div>
 
       <div class="img">
-        <img src="./resources/images/img6.jpg" alt="myrtle">
+        <img src="./resources/images/img6.jpg" alt="myrtle" height="200" width="300">
         <h4>Myrle Ave Tea</h4>
       </div>
 
       <div class="img">
-        <img src="./resources/images/img1.jpg" alt="bedford">
+        <img src="./resources/images/img1.jpg" alt="bedford" height="200" width="300">
         <h4>Bedford Bizarre Tea</h4>
       </div>
     </div>
@@ -70,7 +70,7 @@
 
               <!-- box3 -->
 
-    <div class="box3">
+    <div id="box3">
 
       <div class="box3box">
         <h3>Downtown</h3>
@@ -106,7 +106,7 @@
 
   <!-- copyright -->
 
-  <h5 class="copy">copyrightt The Tea Cozy 2017</h5>
+  <h5 class="copy">copyright The Tea Cozy 2017</h5>
 
   </body>
 
